--- a/articles-nav/index.html
+++ b/articles-nav/index.html
@@ -2,9 +2,289 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Веарсервис</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
 <body>
+<header class="main-header">
+  <div class="header__wrapper-inner">
+    <div class="logo">
+      <a href="../index.html" class="logo__link">
+        <img src="../img/logo.svg" width="203" height="58" alt="" class="logo__img">
+      </a>
+    </div>
+
+    <nav class="nav">
+      <ul class="main-menu">
+        <li class="main-menu__items"><a href="../products-nav/details/index.html" class="main-menu__link">Продукция</a>
+        </li>
+        <li class="main-menu__items"><a href="../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items  main-menu__items--active"><a href="" class="main-menu__link">Статьи</a></li>
+        <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
+        <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
+      </ul>
+    </nav>
+
+    <div class="phone">
+      <p class="phone__text"><span class="phone__code">+7 495 </span>727-08-09</p>
+    </div>
+
+  </div>
+</header>
+
+<main>
+  <div class="container">
+    <section class="articles-container">
+      <h1 class="articles-container__heading main-heading">Статьи</h1>
+      <article class="article-card">
+        <a href="" class="article-card__link">
+          <p class="article-card__date">3 дня назад</p>
+          <h2 class="article-card__heading">Качество — это наша работа</h2>
+          <p class="article-card__description">Компания «Веар Сервис» является лидером российского рынка по производству износостойких деталей и защите оборудования от износа. Специализация предприятия — это изготовление деталей из износостойкой стали Hardox и других высокопрочных материалов</p>
+        </a>
+      </article>
+
+      <article class="article-card">
+        <a href="" class="article-card__link">
+          <p class="article-card__date">24 марта</p>
+          <h2 class="article-card__heading">Наплавленная плита CDP — лучшее решение для брони бетоносмесителя</h2>
+          <p class="article-card__description">Компания «Веар Сервис» изготовила донную броню бетоносмесителя Schlosser-Pfeiffer SM-3750 из наплавленных плит CDP</p>
+        </a>
+      </article>
+
+      <article class="article-card">
+        <a href="" class="article-card__link">
+          <p class="article-card__date">22 декабря 2016</p>
+          <h2 class="article-card__heading">В поисках новой стратегии борьбы с износом</h2>
+          <p class="article-card__description">В любом механизме и оборудовании есть слабое звено — деталь, которая выходит из строя первой, приводя к приносящей убытки остановке работы всего устройства</p>
+        </a>
+      </article>
+
+      <article class="article-card">
+        <a href="" class="article-card__link">
+          <p class="article-card__date">3 октября 2016</p>
+          <h2 class="article-card__heading">Высокопрочные стали для спецтехники и оборудования</h2>
+          <p class="article-card__description">Во многих языках мира есть устойчивое выражение «крепкий, как железо». Металлы, и железо первое из них, веками были для людей синонимом твердости, непреклонности в выполнении поставленной задачи. Этот устойчивый образ вполне понятен и нам, хотя в начале третьего тысячелетия вернее было бы сказать «крепкий как сталь» — прочный, износостойкий сплав, хорошо справляющийся с обработкой как других металлов, так и абразивных горных пород</p>
+        </a>
+      </article>
+
+      <article class="article-card">
+        <a href="" class="article-card__link">
+          <p class="article-card__date">14 февраля 2016</p>
+          <h2 class="article-card__heading">HARDOX — надежные решения для сельского хозяйства</h2>
+          <p class="article-card__description">В России находится 10 % всех пахотных земель мира. Свыше 4/5 пашни в России приходится на Центральное Поволжье, Северный Кавказ, Урал и Западную Сибирь. Основные сельскохозяйственные культуры: зерновые, сахарная свекла, подсолнечник, картофель, лён</p>
+        </a>
+      </article>
+
+      <article class="article-card">
+        <a href="" class="article-card__link">
+          <p class="article-card__date">14 октября 2015</p>
+          <h2 class="article-card__heading">HARDOX — Ваше конкурентное преимущество</h2>
+          <p class="article-card__description">Конкурентоспособность современных промышленных предприятий во многом зависит от производительности и надежности используемого оборудования</p>
+        </a>
+      </article>
+
+      <article class="article-card">
+        <a href="" class="article-card__link">
+          <p class="article-card__date">10 сентября 2015</p>
+          <h2 class="article-card__heading">Износостойкие детали HARDOX, made in Russia</h2>
+          <p class="article-card__description">Нас приучили к тому, что всё произведенное за границей это хорошо, а к Российским производителям и товарам большинство из нас относится скептически</p>
+        </a>
+      </article>
+
+    </section>
+
+
+  </div>
+</main>
+
+
+<footer class="footer">
+  <div class="footer__wrapper">
+    <div class="footer-top">
+      <div class="footer-top__wrapper">
+        <div class="footer-top__wrapper-inner">
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Компания "Веар Сервис"</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">О нас</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Производственные возможности</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Новости</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Статьи</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Контакты</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Материалы</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Hardox</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Кастолин</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Quard</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Relia</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Weldox</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Domex</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Creusabro</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Eutalloy</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Xar</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Лист футеровочный</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Износостойкие покрытия</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Высокопрочная сталь</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Продукция</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Дорожно-строительной техники</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Дробильно-сортировочного оборудования</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Оборудования вторичной обработки</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Бетоносмесителей</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link  footer-top__cat-menu-link--last">Прочая продукция</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Изделия</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Ножи</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Сита</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Футеровки</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Броня</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Плиты и пластины</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Прочее</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Услуги</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Обработка Hardox</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Наплавка</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Напыление металла</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Восстановление сваркой</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Гибка металла</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Резка металла</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Защита от износа</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-low">
+      <div class="footer-low__wrapper">
+        <div class="footer-low__wrapper-inner">
+
+          <div class="footer-low__column">
+            <p class="footer-low__phone">
+              +7 495 727-08-09
+            </p>
+            <a href="" class="footer-low__email">info@wearservice.ru</a>
+            <p class="footer-low__address">
+              ул. Елецкая, д. 26, кор. 2,
+              г. Москва, 115583
+            </p>
+          </div>
+
+
+          <div class="footer-low__column">
+
+            <div class="footer-low__social">
+              <a href="" class="footer-low__facebook-link footer-low__social-link" target="_blank">Facebook</a>
+              <a href="" class="footer-low__youtube-link footer-low__social-link" target="_blank">YouTube</a>
+              <a href="" class="footer-low__instagram-link footer-low__social-link" target="_blank">Instagram</a>
+            </div>
+
+            <div class="footer-low__copyright">
+              ООО «Веар Сервис» © 2014—2018
+              <a href="/privacy_policy/" class="footer-low__copyright-link">Политика конфидициальности</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
