--- a/gallery-nav/index.html
+++ b/gallery-nav/index.html
@@ -21,7 +21,7 @@
         <li class="main-menu__items"><a href="../products-nav/details/index.html" class="main-menu__link">Продукция</a>
         </li>
         <li class="main-menu__items  main-menu__items--active"><a href="" class="main-menu__link">Сделали</a></li>
-        <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
+        <li class="main-menu__items"><a href="../about-nav/index.html" class="main-menu__link">Статьи</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
       </ul>
