--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="main-menu__items"><a href="products-nav/details/index.html" class="main-menu__link">Продукция</a>
             </li>
             <li class="main-menu__items"><a href="gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
-            <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
+            <li class="main-menu__items"><a href="articles-nav/index.html" class="main-menu__link">Статьи</a></li>
             <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
             <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
           </ul>
