--- a/products-nav/materials/index.html
+++ b/products-nav/materials/index.html
@@ -20,7 +20,7 @@
       <ul class="main-menu">
         <li class="main-menu__items  nav-list__item--active">Продукция</li>
         <li class="main-menu__items"><a href="../../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
-        <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
+        <li class="main-menu__items"><a href="../../articles-nav/index.html" class="main-menu__link">Статьи</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
       </ul>
